--- a/Code_Base/package.json
+++ b/Code_Base/package.json
@@ -21,8 +21,11 @@
     "@angular/router": "~9.0.7",
     "@auth0/angular-jwt": "^4.0.0",
     "@okta/okta-angular": "^2.0.0",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "ngx-bootstrap": "^5.5.0",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
