--- a/Code_Base/angular.json
+++ b/Code_Base/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "src": {
@@ -24,15 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "src/styles.css"
             ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js",
-              "node_modules/chart.js/dist/Chart.min.js",
-              "node_modules/angular-chart.js/dist/angular-chart.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
